--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 # Prerequisites
 *.d
-
 # Object files
 *.o
 *.ko
@@ -46,7 +45,9 @@
 *.mod*
 *.cmd
 .tmp_versions/
+.ccls-cache/
 modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
